--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "dependencies": {
     "express": "^4.4.2",
     "mongoose": "^5.13.6",
-    "body-parser": "^1.19.0"
+    "body-parser": "^1.19.0",
+    "jsonwebtoken": "^8.5.1",
+    "dotenv": "^10.0.0",
+    "md5": "^2.3.0"
   },
   "scripts": {
     "start": "nodemon index.js"
