--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,3 @@
-MONGO=mongodb+srv://root:root@cluster.48q1g.mongodb.net/node?retryWrites=true&w=majority
+MONGO=
 SECRET_KEY=bFRsaWZ4amBAYmdBRiZEJmQoWGMzNA==
 DATA_KEY=UCt7KV1IQFNbRFYjVUVYUkJ6b3w=
